# vehicle-mpc-controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: mpc_bicycle_double_lane_change.cpp  mpc_bicycle_lane_change.cpp
include/: bicycle_model.h  mpc_controller.h  plot_utils.h  trajectory.h  unicycle_model.h  utils.h  vehicle_model.h  vehicle_simulator.h
params/: mpc_bicycle_double_lane_change.json  mpc_bicycle_lane_change.json
src/: bicycle_model.cpp  mpc_controller.cpp  trajectory.cpp  unicycle_model.cpp  utils.cpp  vehicle_model.cpp  vehicle_simulator.cpp
tests/: CMakeLists.txt  googletest-download.cmake  googletest.cmake  mpc_controller_test.cpp  trajectory_test.cpp  utils_test.cpp  vehicle_simulator_test.cpp
